BUG#22972 - Falcon: Partitioned table with pending transaction leads to             strange error

Falcon cannot drop a table with pending transaction and error
message is misleading.

With this fix Falcon returns descriptive warning.