include/my_base.h
@@ -419,7 +419,8 @@ enum ha_base_keytype {
 #define HA_ERR_LOGGING_IMPOSSIBLE 170 /* It is not possible to log this
                                          statement */
 #define HA_ERR_TABLESPACE_EXIST 171
-#define HA_ERR_LAST              171 /*Copy last error nr.*/
+#define HA_ERR_LOCK_OR_ACTIVE_TRANSACTION 172
+#define HA_ERR_LAST              172 /*Copy last error nr.*/
 /* Add error numbers before HA_ERR_LAST and change it accordingly. */
 #define HA_ERR_ERRORS            (HA_ERR_LAST - HA_ERR_FIRST + 1)
 
